--- a/public/olc/css/style_old.css
+++ b/public/olc/css/style_old.css
@@ -419,7 +419,6 @@ header {
 }
 
 .annotation-text {
-    font-weight: 700;
     margin-bottom: 7px;
 }
 
